[style]: Fixed styling issues on home page
STYLE:

Added new logo to footer component
Fixed styling issues for home page:
- When working with a smaller window, the "key features" issued sizing issues causing items to load off screen.

CHORE:

Updated .gitignore

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -22,6 +22,7 @@
     width: 50px;
     height: 50px;
     margin-bottom: 20px;
+    filter: invert(100%) sepia(10%) saturate(150%) hue-rotate(180deg) brightness(120%) contrast(90%);
 }
 
 .source-code {
