--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -161,7 +161,7 @@
     display: grid;
     grid-template-rows: repeat(2, auto);
     grid-template-columns: repeat(2, auto);
-    gap: 40px;
+    gap: 20px;
     align-content: center;
     text-align: center;
 }
@@ -217,11 +217,14 @@
     }
 }
 
-@media screen and (max-width: 1780px) {
+@media screen and (max-width: 1800px) {
     .total-container,
-    .bio__paragraph-list {
+    .bio__paragraph-list,
+    .bio__paragraph-list__choosing,
+    .bio__list {
         display: flex;
         flex-direction: column;
+        gap: 5px;
     }
 
     .home {
